Made few changes in code due to java 17 upgrade